# wgpu-experimentation

./: .gitignore  Cargo.toml  README.md
examples/: dvd.rs  game_of_life.rs
src/: app.rs  config.rs  lib.rs  main.rs  render.rs  scene.rs
src/debug/: debug_renderer.rs  gui.rs  mod.rs
src/debug/widget/: barchart.rs  button.rs  color.rs  debug.rs  label.rs  logger.rs  mod.rs  slider.rs  value.rs
src/graphics/: camera.rs  mod.rs  pipeline.rs  shapes.rs  types.rs
src/graphics/shaders/: shader.wgsl  shader_edge.wgsl
src/utils/: circular_buffer.rs  cyclic_array.rs  lisp.rs  mod.rs  shape.rs
