[package]
name = "test-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27.2"
egui-wgpu = "0.27.2"
egui-winit = "0.27.2"
pollster = "0.3.0"
wgpu = "0.19.4"
winit = "0.29.15"
bytemuck = { version = "1.14", features = ["derive"] }
regex = "1.10.5"
